--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,12 @@
 #container a {
   text-decoration: none;
 }
+
+.video {
+  width: 100%;
+}
+
+ion-list {
+  display: flex;
+  flex-wrap: wrap;
+}
